@@ -2,6 +2,8 @@
 
 AUTOMAKE_OPTIONS = 1.4 foreign
 
+LINT = splint
+
 EXTRA_DIST = autogen.sh CHANGES $(man_MANS) popt.spec \
 	testit.sh test-poptrc test3-data/0* \
 	po/*.in po/*.po po/popt.pot \
@@ -16,13 +18,13 @@ noinst_HEADERS = findme.h poptint.h system.h
 noinst_PROGRAMS = test1 test2 test3
 test1_SOURCES = test1.c
 test1_LDFLAGS = -all-static
-test1_LDADD = $(lib_LTLIBRARIES)
+test1_LDADD = $(usrlib_LTLIBRARIES)
 test2_SOURCES = test2.c
 test2_LDFLAGS = -all-static
-test2_LDADD = $(lib_LTLIBRARIES)
+test2_LDADD = $(usrlib_LTLIBRARIES)
 test3_SOURCES = test3.c
 test3_LDFLAGS = -all-static
-test3_LDADD = $(lib_LTLIBRARIES)
+test3_LDADD = $(usrlib_LTLIBRARIES)
 
 noinst_SCRIPTS = testit.sh
 
@@ -32,7 +34,9 @@ test1="./test1"
 TESTS = testit.sh
 
 include_HEADERS = popt.h
-lib_LTLIBRARIES = libpopt.la
+
+usrlibdir = $(libdir)@MARK64@
+usrlib_LTLIBRARIES = libpopt.la
 libpopt_la_SOURCES = popt.c findme.c poptparse.c poptconfig.c popthelp.c
 
 man_MANS = popt.3
@@ -46,9 +50,9 @@ popt.lcd: Makefile.am ${libpopt_la_SOURCES} ${include_HEADERS} ${noinst_HEADERS}
 sources:
 	@echo $(libpopt_la_SOURCES:%=popt/%)
 
-.PHONY: lclint
-lclint:
-	lclint ${DEFS} ${INCLUDES} test1.c ${libpopt_la_SOURCES}
+.PHONY: lint
+lint:
+	$(LINT) ${DEFS} ${INCLUDES} test1.c ${libpopt_la_SOURCES}
 
 CVSTAG = $(PACKAGE)-$(subst .,_,$(VERSION))
 
